--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
     <form novalidate>
       <input tabindex="1" type="email" name="email" id="email" aria-label="register your email" placeholder="email@example.com">
       <div id="errorMessage"></div>
-      <button onclick="clickBtn()" type="button">Get Started For Free</button>
+      <button onclick="clickBtn()" type="button" onsubmit="return false">Get Started For Free</button>
     </form>
   </aside>
 
@@ -154,9 +154,9 @@
     </ul>
 
     <div id="social-links">
-      <a href="http://www.facebook.com"><ion-icon name="logo-facebook" size="large"></ion-icon></a>
-      <a href="http://www.twitter.com"><ion-icon name="logo-twitter" size="large"></ion-icon></a>
-      <a href="http://www.instagram.com"><ion-icon name="logo-instagram" size="large"></ion-icon></a>
+      <a href="#" aria-label="facebook"><ion-icon name="logo-facebook" size="large"></ion-icon></a>
+      <a href="#" aria-label="twitter"><ion-icon name="logo-twitter" size="large"></ion-icon></a>
+      <a href="#" aria-label="instagram"><ion-icon name="logo-instagram" size="large"></ion-icon></a>
     </div>
 
     <p class="attribution">
