--- a/index.html
+++ b/index.html
@@ -122,10 +122,10 @@
     <h2>Get early access today</h2>
     <p>It only takes a minute to sign up and our free starter tier is extremely generous. If you have any questions, our
       support team would be happy to help you.</p>
-    <form novalidate>
+    <form novalidate onsubmit="return false">
       <input tabindex="1" type="email" name="email" id="email" aria-label="register your email" placeholder="email@example.com">
       <div id="errorMessage"></div>
-      <button onclick="clickBtn()" type="button" onsubmit="return false">Get Started For Free</button>
+      <button onclick="clickBtn()" type="submit">Get Started For Free</button>
     </form>
   </aside>
 
