--- a/index.html
+++ b/index.html
@@ -20,150 +20,152 @@
 
 <body>
 
-  <header>
-    <nav>
-      <div id="logo">
-        <img src="./images/logo.svg" alt="logo">
-      </div>
-      
+  <div id="main-wrapper">
+    <header>
+      <nav>
+        <div id="logo">
+          <img src="./images/logo.svg" alt="logo">
+        </div>
+        
+        <div>
+          <a href="#">Features</a>
+          <a href="#">Team</a>
+          <a href="#">Sign In</a>
+        </div>
+      </nav>
+      <section id="intro">
+        <img src="./images/illustration-intro.png" alt="intro">
+        <h1>All your files in one secure location, accessible anywhere.</h1>
+        <p>Fylo stores all your most important files in one secure location. Access them wherever you need, share and collaborate with friends family, and co-workers.</p>
+        <a href="#">Get Started</a>
+      </section>
+    </header>
+  
+    <main>
       <div>
-        <a href="#">Features</a>
-        <a href="#">Team</a>
-        <a href="#">Sign In</a>
+        <img src="./images/icon-access-anywhere.svg" alt="access files">
+        <h2>Access your files, anywhere</h2>
+        <p>The ability to use a smartphone, tablet, or computer to access your account means your files follow you
+          everywhere.</p>
       </div>
-    </nav>
-    <section id="intro">
-      <img src="./images/illustration-intro.png" alt="intro">
-      <h1>All your files in one secure location, accessible anywhere.</h1>
-      <p>Fylo stores all your most important files in one secure location. Access them wherever you need, share and collaborate with friends family, and co-workers.</p>
-      <a href="#">Get Started</a>
-    </section>
-  </header>
-
-  <main>
-    <div>
-      <img src="./images/icon-access-anywhere.svg" alt="access files">
-      <h2>Access your files, anywhere</h2>
-      <p>The ability to use a smartphone, tablet, or computer to access your account means your files follow you
-        everywhere.</p>
-    </div>
-    <div>
-      <img src="./images/icon-security.svg" alt="access files">
-      <h2>Security you can trust</h2>
-      <p>2-factor authentication and user-controlled encryption are just a couple of the security features we allow to
-        help secure your files.</p>
-    </div>
-    <div>
-      <img src="./images/icon-collaboration.svg" alt="access files">
-      <h2>Real-time collaboration</h2>
-      <p>Securely share files and folders with friends, family and colleagues for live collaboration. No email
-        attachments required.</p>
-    </div>
-    <div>
-      <img src="./images/icon-any-file.svg" alt="access files">
-      <h2>Store any type of file</h2>
-      <p>Whether you're sharing holidays photos or work documents, Fylo has you covered allowing for all file types to
-        be securely stored and shared.</p>
-    </div>
-  </main>
-
-  <article>
-    <img src="./images/illustration-stay-productive.png" alt="">
-    <div>
-      <h2>Stay productive, wherever you are</h2>
-      <p>Never let location be an issue when accessing your files. Fylo has you covered for all of your file storage
-        needs.</p>
-      <p>Securely share files and folders with friends, family and colleagues for live collaboration. No email
-        attachments required.</p>
-      <span>
-        <a href="#">See how Fylo works</a>
-        <img src="./images/icon-arrow.svg" alt="arrow icon">
-      </span>
-    </div>
-  </article>
-
-  <div class="quotes">
-    <img id="quote-image" src="./images/bg-quotes.png" alt="quotes">
-    <div class="quotes__card">
-      <p>Fylo has improved our team productivity by an order of magnitude. Since making the switch our team has become a well-oiled collaboration machine.</p>
-      <div class="avatar">
-        <img src="./images/profile-1.jpg" alt="profile avatar">
-        <div class="avatar-name">
-          <strong>Satish Patel</strong>
-          <small>Founder & CEO, Huddle</small>
+      <div>
+        <img src="./images/icon-security.svg" alt="access files">
+        <h2>Security you can trust</h2>
+        <p>2-factor authentication and user-controlled encryption are just a couple of the security features we allow to
+          help secure your files.</p>
+      </div>
+      <div>
+        <img src="./images/icon-collaboration.svg" alt="access files">
+        <h2>Real-time collaboration</h2>
+        <p>Securely share files and folders with friends, family and colleagues for live collaboration. No email
+          attachments required.</p>
+      </div>
+      <div>
+        <img src="./images/icon-any-file.svg" alt="access files">
+        <h2>Store any type of file</h2>
+        <p>Whether you're sharing holidays photos or work documents, Fylo has you covered allowing for all file types to
+          be securely stored and shared.</p>
+      </div>
+    </main>
+  
+    <article>
+      <img src="./images/illustration-stay-productive.png" alt="">
+      <div>
+        <h2>Stay productive, wherever you are</h2>
+        <p>Never let location be an issue when accessing your files. Fylo has you covered for all of your file storage
+          needs.</p>
+        <p>Securely share files and folders with friends, family and colleagues for live collaboration. No email
+          attachments required.</p>
+        <span>
+          <a href="#">See how Fylo works</a>
+          <img src="./images/icon-arrow.svg" alt="arrow icon">
+        </span>
+      </div>
+    </article>
+  
+    <div class="quotes">
+      <img id="quote-image" src="./images/bg-quotes.png" alt="quotes">
+      <div class="quotes__card">
+        <p>Fylo has improved our team productivity by an order of magnitude. Since making the switch our team has become a well-oiled collaboration machine.</p>
+        <div class="avatar">
+          <img src="./images/profile-1.jpg" alt="profile avatar">
+          <div class="avatar-name">
+            <strong>Satish Patel</strong>
+            <small>Founder & CEO, Huddle</small>
+          </div>
+        </div>
+      </div>
+      <div class="quotes__card">
+        <p>Fylo has improved our team productivity by an order of magnitude. Since making the switch our team has become a
+          well-oiled collaboration machine.</p>
+        <div class="avatar">
+          <img src="./images/profile-2.jpg" alt="profile avatar">
+          <div class="avatar-name">
+            <strong>Bruce McKenzie</strong>
+            <small>Founder & CEO, Huddle</small>
+          </div>
+        </div>
+      </div>
+      <div class="quotes__card">
+        <p>Fylo has improved our team productivity by an order of magnitude. Since making the switch our team has become a
+          well-oiled collaboration machine.</p>
+        <div class="avatar">
+          <img src="./images/profile-3.jpg" alt="profile avatar">
+          <div class="avatar-name">
+            <strong>Iva Boyd</strong>
+            <small>Founder & CEO, Huddle</small>
+          </div>
         </div>
       </div>
     </div>
-    <div class="quotes__card">
-      <p>Fylo has improved our team productivity by an order of magnitude. Since making the switch our team has become a
-        well-oiled collaboration machine.</p>
-      <div class="avatar">
-        <img src="./images/profile-2.jpg" alt="profile avatar">
-        <div class="avatar-name">
-          <strong>Bruce McKenzie</strong>
-          <small>Founder & CEO, Huddle</small>
-        </div>
+  
+    <aside>
+      <h2>Get early access today</h2>
+      <p>It only takes a minute to sign up and our free starter tier is extremely generous. If you have any questions, our
+        support team would be happy to help you.</p>
+      <form novalidate onsubmit="return false">
+        <input tabindex="1" type="email" name="email" id="email" aria-label="register your email" placeholder="email@example.com">
+        <div id="errorMessage"></div>
+        <button onclick="clickBtn()" type="submit">Get Started For Free</button>
+      </form>
+    </aside>
+  
+    <footer>
+      <img src="./images/logo.svg" alt="logo">
+      <div id="contact-info">
+        <img src="./images/icon-location.svg" alt="location icon">
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua</p>
+        <img src="./images/icon-phone.svg" alt="phone icon">
+        <p>+1-543-123-4567</p>
+        <img src="./images/icon-email.svg" alt="email icon">
+        <p>example@fylo.com</p>
       </div>
-    </div>
-    <div class="quotes__card">
-      <p>Fylo has improved our team productivity by an order of magnitude. Since making the switch our team has become a
-        well-oiled collaboration machine.</p>
-      <div class="avatar">
-        <img src="./images/profile-3.jpg" alt="profile avatar">
-        <div class="avatar-name">
-          <strong>Iva Boyd</strong>
-          <small>Founder & CEO, Huddle</small>
-        </div>
+  
+      <ul>
+        <li><a href="#">About Us</a></li>
+        <li><a href="#">Jobs</a></li>
+        <li><a href="#">Press</a></li>
+        <li><a href="#">Blog</a></li>
+      </ul>
+  
+      <ul>
+        <li><a href="#">Contact Us</a></li>
+        <li><a href="#">Terms</a></li>
+        <li><a href="#">Privacy</a></li>
+      </ul>
+  
+      <div id="social-links">
+        <a href="#" aria-label="facebook"><ion-icon name="logo-facebook" size="large"></ion-icon></a>
+        <a href="#" aria-label="twitter"><ion-icon name="logo-twitter" size="large"></ion-icon></a>
+        <a href="#" aria-label="instagram"><ion-icon name="logo-instagram" size="large"></ion-icon></a>
       </div>
-    </div>
+  
+      <p class="attribution">
+        Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
+        Coded by <a href="https://www.frontendmentor.io/profile/rafetbasturk" target="_blank">Rafet</a>.
+      </p>
+    </footer>
   </div>
-
-  <aside>
-    <h2>Get early access today</h2>
-    <p>It only takes a minute to sign up and our free starter tier is extremely generous. If you have any questions, our
-      support team would be happy to help you.</p>
-    <form novalidate onsubmit="return false">
-      <input tabindex="1" type="email" name="email" id="email" aria-label="register your email" placeholder="email@example.com">
-      <div id="errorMessage"></div>
-      <button onclick="clickBtn()" type="submit">Get Started For Free</button>
-    </form>
-  </aside>
-
-  <footer>
-    <img src="./images/logo.svg" alt="logo">
-    <div id="contact-info">
-      <img src="./images/icon-location.svg" alt="location icon">
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua</p>
-      <img src="./images/icon-phone.svg" alt="phone icon">
-      <p>+1-543-123-4567</p>
-      <img src="./images/icon-email.svg" alt="email icon">
-      <p>example@fylo.com</p>
-    </div>
-
-    <ul>
-      <li><a href="#">About Us</a></li>
-      <li><a href="#">Jobs</a></li>
-      <li><a href="#">Press</a></li>
-      <li><a href="#">Blog</a></li>
-    </ul>
-
-    <ul>
-      <li><a href="#">Contact Us</a></li>
-      <li><a href="#">Terms</a></li>
-      <li><a href="#">Privacy</a></li>
-    </ul>
-
-    <div id="social-links">
-      <a href="#" aria-label="facebook"><ion-icon name="logo-facebook" size="large"></ion-icon></a>
-      <a href="#" aria-label="twitter"><ion-icon name="logo-twitter" size="large"></ion-icon></a>
-      <a href="#" aria-label="instagram"><ion-icon name="logo-instagram" size="large"></ion-icon></a>
-    </div>
-
-    <p class="attribution">
-      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
-      Coded by <a href="https://www.frontendmentor.io/profile/rafetbasturk" target="_blank">Rafet</a>.
-    </p>
-  </footer>
 
   <script>
     const email = document.getElementById("email");
